@@ -57,6 +57,7 @@ rktio_connect_stop
 rktio_poll_connect_ready
 rktio_connect_trying
 rktio_socket_shutdown
+rktio_tcp_nodelay
 rktio_udp_open
 rktio_udp_disconnect
 rktio_udp_bind
