@@ -575,6 +575,12 @@
  rktio_socket_shutdown
  (((ref rktio_t) rktio) ((ref rktio_fd_t) rfd) (int mode)))
 (define-function/errno
+ #f
+ ()
+ rktio_ok_t
+ rktio_tcp_nodelay
+ (((ref rktio_t) rktio) ((ref rktio_fd_t) rfd) (rktio_bool_t enable)))
+(define-function/errno
  NULL
  ()
  (ref rktio_fd_t)
